--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-falcon==3.1.1
-gunicorn==20.1.0
-python-dotenv==0.20.0
-requests==2.27.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
+idna==3.4
+python-dotenv==1.0.0
+requests==2.31.0
+urllib3==2.0.3
